--- a/public/css/register.css
+++ b/public/css/register.css
@@ -157,6 +157,7 @@
     border-top-right-radius: 30px;
     background-image: linear-gradient(360deg, #73A3F8, #63E4FE);
     padding-bottom: 50px;
+    padding-top: 50px;
 }
 
 .register-right div {
@@ -186,12 +187,16 @@
 @media screen and (max-width: 1200px) {
     .register-right {
         width: 49.39%;
+        padding-top: 100px !important;
+        padding-bottom: 100px !important;
     }
 }
 
 @media screen and (max-width: 992px) {
     .register-right {
         width: 49.15%;
+        padding-top: 100px !important;
+        padding-bottom: 100px !important;
     }
 
     .register-image img {
@@ -200,6 +205,13 @@
         padding-top: 120px;
     }
     
+}
+
+@media screen and (max-width: 1100px){
+    .register-right{
+        padding-top: 100px !important;
+        padding-bottom: 100px !important;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -221,4 +233,9 @@
     .card-body{
         width: 100%;
     }
+    
+    .cont{
+        margin-top: 30px;
+    }
+    
 }
